esewa integration=Failed

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,13 @@
 
     "DefaultConnection": "Server=GAURAV\\SQLEXPRESS;Database=ClzProject; Trusted_Connection=True;TrustServerCertificate=True "
 
+  },
+  "Esewa": {
+    "MerchantCode": "EPAYTEST",
+    "SuccessUrl": "https://localhost:7002/Payment/EsewaSuccess",
+    "FailureUrl": "https://localhost:7002/Payment/EsewaFailure",
+    "PaymentUrl": "https://epay.esewa.com.np/api/epay/main/v2/form ",
+    "VerificationUrl": "https://uat.esewa.com.np/epay/transrec"
   }
 }
+
